--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* General Styles */
 body {
-  background-color: rgb(19, 22, 23);
+  background-color: rgb(18, 22, 23);
 }
 
 .attribution {
@@ -61,6 +61,11 @@ a {
 
 a:hover {
   color: black;
+}
+
+.btns button  {
+  width: 90%;
+  text-align: center;
 }
 
 button {
